objects/ICD_Status_Changed_Reason__c.object
<CustomObject>
    <fields>
        <fullName>Document_Submitted__c</fullName>
        <label>Document Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documnent_Submitted__c</fullName>
        <label>Documnent Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Compliance_Document__c</fullName>
        <label>Invoice Compliance Document</label>
        <referenceTo>Invoice_Compliance_Document__c</referenceTo>
        <relationshipLabel>ICD Status Changed Reasons</relationshipLabel>
        <relationshipName>ICD_Status_Changed_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Document__c</fullName>
        <label>Link to Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes_to_Partner__c</fullName>
        <label>Notes to Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <label>ICD Status Changed Reason</label>
    <nameField>
        <label>ICD Status Changed Reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICD Status Changed Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>